v0.9.5
------
- Fixed normal map channels
- Fixed a localization error on fuel transfer messages
- Updated DynamicBatteryStorage to 1.1.0
-- Refactored plugin for many improvements
-- Proper support for RealBattery

v0.9.4
------
- Updated B9PartSwitch to 1.9.0
- Updated ModuleManager to 2.8.1
- Fixed low cost of B-800 radial battery pack
- Improvements to NFE/KA integration
- Tweak a few localization fields

v0.9.3
------
- Fix DBS issue

v0.9.2
------
- Updated DynamicBatteryStorage to 1.0.1
-- Reduced logging
-- Fixed an issue with generator parsing on ModuleResourceConverters

v0.9.1
------
- Updated B9PartSwitch to 1.8.1
- Added Spanish localization courtesy of forum user fitiales
- Fixed a small bug in the localization file

v0.9.0
------
- KSP 1.3
- Updated bundled MM to 2.8.0
- Updated bundled B9PartSwitch to 1.8.0
- Updated MiniAVC to 1.0.3.3
- Updated bundled CRP to 0.7.1
- Full localization support for parts and plugins
- New sub-plugin: DynamicBatteryStorage
-- Dynamically adjusts EC storage to combat KSP crap resource mechanics at high timewarp
-- Should dramatically reduce instances of EC loss at high timewarp
- Revised many part descriptions, tags and names
- Revised costs of batteries to correctly match stock batteries
- Revised costs of capacitors to be slightly more expensive (~1.5x) than before
- Battery and capacitor mass values are now 100% consistent
- Reactor numbering system revised for better sorting
- All reactors are now their inline variant by default
- MX-3L Hermes reactor now generates 6000 kW, up from 5000 kW. All other stats adjusted to match
- Rebalanced cost and mass of all reactors
- Rebalanced mass and cost of all nuclear fuel containers
- Reduced EC storage of reactors to 50% of rated kW
- Reduced price of PB-AS-NUK RTG
- Increased mass of Whirlijig Nuclear Reprocessor
- Adjusted recipes for Whirlijig reprocessing/extraction to be less weird
- DecayingRTGs patch now cuts price of affected RTGs by 50%