@@ -2,6 +2,10 @@ v0.9.5
 ------
 - Fixed normal map channels
 - Fixed a localization error on fuel transfer messages
+- Fixed a localization error on destroyed reactor cores
+- Fixed a few missing units in UI fields
+- Modified units in UI fields and panels to be localized
+- Fixed FissionEngine not caring about core damage
 - Updated DynamicBatteryStorage to 1.1.0
 -- Refactored plugin for many improvements
 -- Proper support for RealBattery
